<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.vynilsapp.ui.WelcomeFragment"
        android:label="@string/welcome_message"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_albumFragment"
            app:destination="@id/albumFragment" />
    </fragment>

    <fragment
        android:id="@+id/albumFragment"
        android:name="com.example.vynilsapp.ui.AlbumFragment"
        android:label="@string/album_catalog_list"
        tools:layout="@layout/fragment_album">
        <action
            android:id="@+id/action_albumFragment_to_createAlbumFragment"
            app:destination="@id/createAlbumFragment" />
    </fragment>

    <fragment
        android:id="@+id/createAlbumFragment"
        android:name="com.example.vynilsapp.ui.CreateAlbumFragment"
        android:label="@string/create_album_title"
        tools:layout="@layout/fragment_create_album" />

</navigation> 