<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="PerformerDetail"
            type="com.example.vynilsapp.models.Performer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <!-- Foto del artista -->
        <ImageView
            android:id="@+id/performerDetailPhoto"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- NOMBRE -->
        <TextView
            android:id="@+id/nombrePerformerDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/performer_name"
            app:layout_constraintTop_toBottomOf="@id/performerDetailPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/nombrePerformerDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nombrePerformerDetailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- FECHA NACIMIENTO -->
        <TextView
            android:id="@+id/fechaNacimientoPerformerDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/performer_birth_date"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/nombrePerformerDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fechaNacimientoPerformerDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fechaNacimientoPerformerDetailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- FECHA CREACIÓN -->
        <TextView
            android:id="@+id/fechaCreacionPerformerDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/performer_creation_date"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/fechaNacimientoPerformerDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fechaCreacionPerformerDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fechaCreacionPerformerDetailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- DESCRIPCIÓN -->
        <TextView
            android:id="@+id/descripcionPerformerDetailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/performer_description"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/fechaCreacionPerformerDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/descripcionPerformerDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/descripcionPerformerDetailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressCircular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:contentDescription="@string/loading"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>